--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,9 @@
-.navbar {height: var(--navbar-height); 
-  &-content {display: flex; align-items: center;}
-  &-nav {margin-left: auto; margin-right: -1.5rem;}
-  &-item {margin-right: 1.5rem;}
+@import '/src/styles/variables';
+
+.navbar {height: var(--navbar-height); padding: 0 $pagepadding; background-color: var(--color-ghostwhite);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  &-content {display: flex; align-items: center; height: 100%;}
+  &-nav {margin-left: auto; margin-right: -2rem; display: flex; align-items: center;}
+  &-item {margin-right: 2rem;}
   &-link {}
 }
