Implemented about section

--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -1,1 +1,13 @@
-.main {}
+.main {
+  &-top {margin-top: 10rem; box-sizing: border-box; text-align: center;
+    h1 {color: var(--color-silver);}
+    h2 {margin-bottom: 1rem; text-transform: uppercase; letter-spacing: 0.2em; color: var(--color-secondary);}
+    em {font-style: normal; color: var(--color-primary);}
+  }
+  &-me {border: 4px outset var(--color-secondary-light); border-radius: 50%;
+    height: 0; padding-top: 100%; position: relative; overflow: hidden; box-sizing: border-box;
+    filter: drop-shadow(0px 20px 20px rgba(0, 0, 0, 0.3));
+    &-container {width: 100%; max-width: 512px; margin: 2rem auto;}
+    img {position: absolute; left: 0; top: 0; width: 100%; height: 100%; object-fit: cover;}
+  }
+}
