--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,15 @@
-$container-width: 1230px;
+$container-width: 1200px;
 $pagepadding: 16px;
 
 $font: 'Roboto', calibri, sans-serif;
 $font-size-body: 16px;
+$font-size-h1: 52px;
+$font-size-h2: 30px;
+$font-size-h3: 20px;
+$font-size-h4: 14px;
+$font-size-small: 0.93rem;
+$font-size-smaller: 0.86rem;
+$font-size-big: 1.2rem;
+
+$icon-size: 24px;
+$mobile: 767px;
