--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,9 +1,20 @@
 @import '/src/styles/variables';
 
-.navbar {height: var(--navbar-height); padding: 0 $pagepadding; background-color: var(--color-ghostwhite);
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
-  &-content {display: flex; align-items: center; height: 100%;}
+.navbar {height: var(--navbar-height); padding: 0 $pagepadding; position: fixed; left: 0; right: 0; top: 0;
+  background-color: var(--color-white); z-index: 10;
+  &-content {display: flex; align-items: center; height: 100%; position: relative;
+    box-sizing: border-box; padding: 0 $pagepadding;
+    &::after {content: ''; position: absolute; left: 0; right: 0; bottom: -2px; height: 2px; 
+      background-image: linear-gradient(90deg, rgba(0, 0, 0,0) 0%, var(--color-secondary-light) 5%, var(--color-secondary-light) 95%, rgba(0, 0, 0, 0) 100%);
+    }
+  }
   &-nav {margin-left: auto; margin-right: -2rem; display: flex; align-items: center;}
   &-item {margin-right: 2rem;}
-  &-link {}
+  &-link {font-size: 1rem; text-transform: uppercase; letter-spacing: 0.1em; display: inline-block; position: relative;
+    &::after {position: absolute; left: 0; right: 0; bottom: -0.5em; content: ''; height: 2px; 
+      background-image: linear-gradient(90deg, rgba(0, 0, 0,0) 0%, var(--color-primary) 15%, var(--color-primary) 85%, rgba(0, 0, 0, 0) 100%);
+      transform: scaleX(0); transform-origin: center center; transition: transform 0.2s;
+    }
+    &:hover::after {transform: none;}
+  }
 }
