--- a/src/components/section/section.scss
+++ b/src/components/section/section.scss
@@ -3,9 +3,8 @@
 .section {margin-bottom: 10rem;
   &-alt {color: var(--color-white); position: relative; padding: 5rem $pagepadding; margin: 15rem -#{$pagepadding} 15rem;
     background-color: var(--color-secondary);
-    &::before {content: ''; position: absolute; left: 0; right: 0; bottom: 100%;
-      z-index: -1; width: 100%; height: 5rem;
-      background: linear-gradient(to bottom left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 50%, var(--color-secondary) 50%, var(--color-secondary) 100%);
+    &::before {content: ''; position: absolute; right: 0; top: -5rem;
+      z-index: -1; width: 100%; border-bottom: 5rem solid var(--color-secondary); border-right: 100vw solid transparent;
     }
   }
   &-title {text-transform: uppercase; letter-spacing: 0.2em; margin-bottom: 3rem; text-align: center;}
