--- a/src/components/info-section/info-section.scss
+++ b/src/components/info-section/info-section.scss
@@ -1,7 +1,7 @@
 @import'/src/styles/variables';
 
 .info-section {position: relative;
-  &-cards {margin: 5rem 0;}
+  &-cards {margin-bottom: 3rem;}
   &-about {padding: 3rem; background-color: var(--color-honeydew); border-radius: 0 2rem 0 2rem; position: relative;
     h3 {margin-bottom: 1em; position: relative; padding-bottom: 1em;
       &::after {content: ''; position: absolute; left: 0; right: 0; bottom: 0; height: 2px; background-color: var(--color-blue-green);}
