--- a/src/components/skill/skill.scss
+++ b/src/components/skill/skill.scss
@@ -5,12 +5,12 @@
     position: relative;
   }
   &-title {flex: 1 1 0; text-transform: uppercase; letter-spacing: 0.2em;}
-  &-level {border: 2px outset var(--color-primary); color: var(--color-primary);
+  &-level {border: 2px outset var(--level-color); color: var(--level-color);
     position: absolute; right: 1rem; top: 0; bottom: 0; margin: auto 0;
     height: 4rem; width: 4rem; border-radius: 50%; font-weight: 500;
     display: flex; align-items: center; justify-content: center;
   }
-  &-body {min-height: 10rem; margin: 0;
+  &-body {min-height: 12rem; margin: 0;
     & > .col {padding: 0;}
   }
   &-content {padding: var(--padding); font-size: $font-size-big;
