--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,5 +1,6 @@
-.logo {height: 50px; width: 50px; position: relative; display: inline-flex; align-items: center; justify-content: center;
+.logo {position: relative; display: inline-flex; align-items: center; justify-content: center;
   font-size: 50px; background-color: var(--color-secondary); border-radius: 16px 0;
+  min-height: 50px; min-width: 50px; height: 50px; width: 50px;
   &-v {position: absolute; color: var(--color-honeydew);}
   &-g {position: absolute; color: var(--color-secondary-light); font-weight: bold;}
 }
