--- a/src/components/skill/skill.scss
+++ b/src/components/skill/skill.scss
@@ -1,6 +1,6 @@
 @import '/src/styles/variables';
 
-.skill {border: 2px solid var(--color-secondary-light); --padding: 2rem; border-radius: 10px;
+.skill {border: 2px solid var(--color-secondary-light); --padding: 2rem; border-radius: 10px; position: relative;
   &-header {padding: var(--padding); padding-right: 7rem; display: flex; border-bottom: 2px solid var(--color-secondary-light);
     position: relative;
   }
@@ -13,10 +13,13 @@
   &-body {min-height: 12rem; margin: 0;
     & > .col {padding: 0;}
   }
-  &-content {padding: var(--padding); font-size: $font-size-big;
+  &-content {padding: var(--padding); font-size: $font-size-big; line-height: 1.4em;
     p {margin-bottom: 1rem;}
   }
   &-image {width: 100%; height: 100%; object-fit: contain; object-position: center center; padding: var(--padding);
     border-left: 2px solid var(--color-secondary-light); box-sizing: border-box;
+  }
+  @media (max-width: $mobile) {
+    &-image {border-left: none; position: absolute; left: 0; top: 0; right: 0; bottom: 0; opacity: 0.2;}
   }
 }
