--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,15 +27,25 @@
 
 html, body {padding: 0; margin: 0; min-height: 100%; height: 100%;}
 
-html {font-family: $font; font-size: $font-size-body; color: var(--color-black); line-height: 1.4em;}
+html {font-family: $font; font-size: $font-size-body; color: var(--color-black); line-height: 1.4em;
+  @media (max-width: $mobile) {font-size: 14px;}
+}
 
 body {overflow-x: hidden;}
 
 h1, h2, h3, h4 {margin: 0; padding: 0; line-height: 1.5em;}
-h1 {font-size: $font-size-h1; font-weight: bold;}
-h2 {font-size: $font-size-h2; font-weight: 600;}
-h3 {font-size: $font-size-h3; font-weight: 600;}
-h4 {font-size: $font-size-h4; font-weight: 600;}
+h1 {font-size: $font-size-h1; font-weight: bold;
+  @media (max-width: $mobile) {font-size: 44px;}
+}
+h2 {font-size: $font-size-h2; font-weight: 600;
+  @media (max-width: $mobile) {font-size: 26px;}
+}
+h3 {font-size: $font-size-h3; font-weight: 600;
+  @media (max-width: $mobile) {font-size: 18px;}
+}
+h4 {font-size: $font-size-h4; font-weight: 600;
+  @media (max-width: $mobile) {font-size: 12px;}
+}
 
 p {margin: 0;}
 a {text-decoration: none; cursor: pointer; color: inherit;}
