--- a/src/components/info-section-card/info-section-card.scss
+++ b/src/components/info-section-card/info-section-card.scss
@@ -1,6 +1,6 @@
 @import '/src/styles/variables';
 
-.info-section-card {width: 100%; max-width: 300px; margin: 0 auto; text-align: center;
+.info-section-card {width: 100%; max-width: 300px; margin: 0 auto; text-align: center; transition-duration: 1s;
   &-image {width: 80%; height: 0; padding-top: 80%; position: relative; margin: 0 auto 2rem;
     img {position: absolute; left: 0; top: 0; width: 100%; height: 100%; object-fit: contain;}
   }
