--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,6 +1,11 @@
 .logo {position: relative; display: inline-flex; align-items: center; justify-content: center;
   font-size: 50px; background-color: var(--color-secondary); border-radius: 16px 0;
   min-height: 50px; min-width: 50px; height: 50px; width: 50px;
+  &::after {content: ''; position: absolute; left: 0; top: 0; opacity: 0;
+    width: 100%; height: 100%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    transition: opacity 0.5s; border-radius: 16px 0;
+  }
   &-v {position: absolute; color: var(--color-honeydew);}
   &-g {position: absolute; color: var(--color-secondary-light); font-weight: bold;}
+  &:hover::after {opacity: 1;}
 }
