--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -1,13 +1,20 @@
 .main {
-  &-top {margin-top: 10rem; box-sizing: border-box; text-align: center;
-    h1 {color: var(--color-silver);}
-    h2 {margin-bottom: 1rem; text-transform: uppercase; letter-spacing: 0.2em; color: var(--color-secondary);}
+  &-top {margin-top: 10rem; box-sizing: border-box; text-align: center; overflow: hidden;
+    h1 {color: var(--color-silver); transform: translateX(-200px); opacity: 0; animation: 1s reset forwards;}
+    h2 {margin-bottom: 1rem; text-transform: uppercase; letter-spacing: 0.2em; color: var(--color-secondary);
+      transform: translateX(200px); opacity: 0; animation: 1s reset forwards;
+    }
     em {font-style: normal; color: var(--color-primary);}
   }
-  &-me {border: 4px outset var(--color-secondary-light); border-radius: 50%;
-    height: 0; padding-top: 100%; position: relative; overflow: hidden; box-sizing: border-box;
+  &-me {height: 0; padding-top: 100%; position: relative; box-sizing: border-box;
     filter: drop-shadow(0px 20px 20px rgba(0, 0, 0, 0.3));
-    &-container {width: 100%; max-width: 512px; margin: 2rem auto;}
-    img {position: absolute; left: 0; top: 0; width: 100%; height: 100%; object-fit: cover;}
+    &-container {width: 100%; max-width: 400px; margin: 2rem auto;
+      transform: scale(0.9); opacity: 0; animation: 1s reset forwards;
+    }
+    img {position: absolute; left: 0; top: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 50%;}
+    &::after {content: ''; left: 0; top: 0; width: 100%; height: 100%; position: absolute;
+      border: 4px outset var(--color-secondary-light); border-radius: 50%; box-sizing: border-box;
+      transform: rotate(360deg); animation: 5s reset infinite linear;
+    }
   }
 }
